# ColAndreas

./: .gitignore  CMakeLists.txt  License.txt  linux_build.sh  pawn.json  readme.md
Linux/: CMakeLists.txt  makefile
Server/include/: colandreas.inc
Windows/: ColAndreas.sln  ColAndreas.vcxproj  ColAndreas.vcxproj.filters
WizardApp/: CMakeLists.txt  Resources.qrc  Windows.rc
WizardApp/ColAndreasWizard/: ColAndreasWizard.sln
WizardApp/ColAndreasWizard/ColAndreasWizard/: ColAndreasWizard.vcxproj  ColAndreasWizard.vcxproj.filters  Splash.cpp  formColAndreasUI.h  stdafx.cpp
WizardApp/ColAndreasWizard/ColAndreasWizard/Debug/: ColAndreasWizard.formColAndreasUI.resources  ColAndreasWizard.vcxproj.GenerateResource.Cache
WizardApp/ColAndreasWizard/ColAndreasWizard/Debug/ColAndreasWizard.tlog/: CL.read.1.tlog  CL.write.1.tlog  ColAndreasWizard.lastbuildstate  ColAndreasWizard.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
WizardApp/ColAndreasWizard/ColAndreasWizard/Release/: ColAndreasWizard.Splash.resources  ColAndreasWizard.vcxproj.GenerateResource.Cache  ColAndreasWizard.vcxprojResolveAssemblyReference.cache
WizardApp/ColAndreasWizard/ColAndreasWizard/Release/ColAndreasWizard.tlog/: ColAndreasWizard.lastbuildstate  ColAndreasWizard.write.1u.tlog  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
WizardApp/ColAndreasWizard/Debug/: ColAndreasWizard.exe.metagen
WizardApp/Images/: credits.txt
WizardApp/include/: ATree.hpp  BuildManager.h  ColManager.hpp  ImgManager.hpp  Main.hpp  MyForm.h  QtMainWindow.hpp  stdafx.h
WizardApp/res/: GPL3.html
WizardApp/src/: BuildManager.cpp  BuildManager.h  ColManager.cpp  ImgManager.cpp  Main.cpp  MyForm.cpp  QtMainWindow.cpp  Splash.h  Splash.resx  formColAndreasUI.cpp  formColAndreasUI.resx
WizardApp/ui/: License.ui  MainWindow.ui  Settings.ui  Working.ui
src/: ColAndreas.cpp  ColAndreas.def  ColAndreas.h  ColAndreasDatabaseReader.cpp  ColAndreasDatabaseReader.h  ColObject.cpp  ColObject.h  DynamicWorld.cpp  DynamicWorld.h  LodArray.h  Natives.cpp  Natives.h  WaterArray.h  dffread.cpp  renderware.cpp
src/SDK/: amxplugin.cpp
src/SDK/amx/: amx.h
